doc: Refactor schema with 'parcours list' and 'parcours'
