# src/swagger.json
@@ -49,7 +49,7 @@
           "200": {
             "description": "Parcours successfully obtained",
             "schema": {
-              "$ref": "#/definitions/myParcours"
+              "$ref": "#/definitions/parcoursList"
             }
           },
           "400": {
@@ -74,13 +74,16 @@
             "description": "Parcours to create",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/myParcours"
+              "$ref": "#/definitions/parcours"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "Parcours successfully created"
+            "description": "Parcours successfully created",
+            "schema": {
+              "$ref": "#/definitions/parcours"
+            }
           },
           "400": {
             "description": "The request is not valid. Body format is incorrect."
@@ -93,7 +96,7 @@
     }
   },
   "definitions": {
-    "myParcours": {
+    "parcoursList": {
       "type": "array",
       "items": {
         "type": "object",
@@ -158,6 +161,71 @@
             "type": "string",
             "example": "La Majeure Santé a pour objectif de former de futurs ingénieurs en informatique pouvant s’interfacer efficacement avec des médecins et tous les professionnels du domaine de la santé.Les étudiants pourront ainsi donner du sens à leur carrière professionnelle en participant à la révolution des applications des données médicales et de l’IA pour la Santé comme, par exemple, l’analyse d’images médicales ou l’analyses de données génétiques ou le développement d’algorithmes pour mieux gérer les maladies des patients via des objets connectés.Du signal à la Data et de la Data à l’IA, les innovations numériques changent les habitudes des soignants et des patients et les ingénieurs font partie de ceux qui révolutionneront la santé de demain."
           }
+        }
+      }
+    },
+    "parcours": {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string",
+          "example": "MTI"
+        },
+        "campus": {
+          "type": "string",
+          "example": "Paris"
+        },
+        "durantion": {
+          "type": "number",
+          "example": 24
+        },
+        "type": {
+          "type": "string",
+          "example": "Master"
+        },
+        "cost": {
+          "type": "number",
+          "example": 25000
+        },
+        "presential": {
+          "type": "number",
+          "example": 50
+        },
+        "start": {
+          "type": "string",
+          "example": "2023-02"
+        },
+        "modules": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "title": {
+                "type": "string",
+                "example": "S9"
+              },
+              "subjects": {
+                "type": "array",
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "title": {
+                      "type": "string",
+                      "example": "Projet IoT / Objet Connecté Médical OpenSource"
+                    },
+                    "description": {
+                      "type": "string",
+                      "example": "Initiation aux bases du projet IoT / Objet Connecté Médical OpenSource"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "description": {
+          "type": "string",
+          "example": "La Majeure Santé a pour objectif de former de futurs ingénieurs en informatique pouvant s’interfacer efficacement avec des médecins et tous les professionnels du domaine de la santé.Les étudiants pourront ainsi donner du sens à leur carrière professionnelle en participant à la révolution des applications des données médicales et de l’IA pour la Santé comme, par exemple, l’analyse d’images médicales ou l’analyses de données génétiques ou le développement d’algorithmes pour mieux gérer les maladies des patients via des objets connectés.Du signal à la Data et de la Data à l’IA, les innovations numériques changent les habitudes des soignants et des patients et les ingénieurs font partie de ceux qui révolutionneront la santé de demain."
         }
       }
     }
